Restricted Inward Movement Into Middle Maze
Restricted inward movement into the middle maze. (the middle maze
cannot be entered from the outside except from the entrance.)

--- a/pacman.html
+++ b/pacman.html
@@ -4,15 +4,20 @@
 	<title>Pacman Type Game</title>
 	<style type="text/css">
 
-	canvas {margin:auto;
+	canvas {
 			margin-top:50px;
 			background-color:green;}
+
+	#cont {margin:auto;
+			width:650px; 
+			
+			}
 	</style>
 	
 </head>
 <body>
 
-	<canvas id="game" width="650px" height="500px"></canvas>
+	<div id="cont"><canvas id="game" width="650px" height="500px"></canvas></div>
 
 <script type="text/javascript"> 
 	
@@ -69,9 +74,12 @@
 				case 38: y-=17; //up move
 				// field constraints
 				if (y < 0) {y = 0;} // upper main wall 
-				// outermost maze wall
+				///////////////////////// outermost maze wall//////////////////////////////////
 			    if ((y < 450)&&(y > 430)&&(x > 50)&&(x < 600)) {y = 450;} // first labyrinth (bottom wall outside)
-				if((y < 45)&&(y > 30)&&(x > 50)&&(x < 600)) {y = 50;} // first labyrinth (top wall inside)
+				if((y < 45)&&(y > 28)&&(x > 45)&&(x < 600)) {y = 50;} // first labyrinth (top wall inside)
+				/////////////////////////middle maze wall////////////////////////////////////
+				if ((y < 400)&&(y > 372)&&(x > 100)&&(x < 550)) {y = 400;} // middle labyrinth (middle wall outside)
+
 				break;
 
 
@@ -79,9 +87,12 @@
 				case 40: y+=17; //down move
 				// field constraints
 				if (y > 490) {y = 490;} // bottom main wall
-				// outermost maze wall
+				//////////////////////// outermost maze wall/////////////////////////////////////
 			    if ((y > 40)&&(y < 60)&&(x > 50)&&(x < 600)) {y = 40;} // first labyrinth (top wall outside)
-			    if((y < 460)&&(y > 440)&&(x > 50)&&(x < 595)) {y = 440;} // first labyrinth (bottom wall inside)
+			    if((y < 460)&&(y > 440)&&(x > 45)&&(x < 595)) {y = 440;} // first labyrinth (bottom wall inside)
+			    /////////////////////////middle maze wall////////////////////////////////////
+			    if ((y > 90)&&(y < 110)&&(x > 100)&&(x < 550)) {y = 90;} // middle labyrinth (middle wall outside)
+
 				break;
 
 
@@ -89,22 +100,28 @@
 				case 37: x-=17; //left move
 				//field constraints
 				if (x < 0) {x = 0}//right main wall
-				// outermost maze wall
+				//////////////////////// outermost maze wall/////////////////////////////////////
 			    if ((y > 45)&&(y < 450)&&(x < 600)&&(x > 580)) {x = 600;} // first labyrinth (right wall outside)
 			    if ((y > 45)&&(y < 200)&&(x < 50)&&(x > 32)) {x = 50;} // first labyrinth (left wall outside top)
 			    if ((y > 300)&&(y < 450)&&(x < 50)&&(x > 32)) {x = 50;}// first labyrinth (left wall outside bottom)
+			    /////////////////////////middle maze wall////////////////////////////////////
+			    if ((y > 100)&&(y < 200)&&(x > 530)&&(x < 550)) {x = 550;} // middle labyrinth (right wall outside top)
+			    if ((y > 300)&&(y < 400)&&(x > 530)&&(x < 550)) {x = 550;}// middle labyrinth (right wall outside bottom)
 
-				break;
+				break;     
 
 
 
 				case 39: x+=17;//right move
 				// field constraints
 				if (x > 640) {x = 640;}//left main wall
-				// outermost maze wall
+				//////////////////////// outermost maze wall/////////////////////////////////////
 			    if ((y > 45)&&(y < 200)&&(x > 40)&&(x < 60)) {x = 40;} // first labyrinth (left wall outside top)
 			    if ((y > 300)&&(y < 450)&&(x > 40)&&(x < 60)) {x = 40;}// first labyrinth (left wall outside bottom)
 			    if ((y > 45)&&(y < 450)&&(x < 610)&&(x > 590)) {x = 590;} // first labyrinth (right wall inside)
+			    /////////////////////////middle maze wall////////////////////////////////////
+			    if ((y > 90)&&(y < 400)&&(x > 90)&&(x < 120)) {x = 90;} // middle labyrinth (left wall outside)
+			    
 				break;
 					
 			}
