Restriction of Outside Movement From Middle Maze
Restricted the outside movement from the middle labyrinth.

--- a/pacman.html
+++ b/pacman.html
@@ -78,8 +78,8 @@
 			    if ((y < 450)&&(y > 430)&&(x > 50)&&(x < 600)) {y = 450;} // first labyrinth (bottom wall outside)
 				if((y < 45)&&(y > 28)&&(x > 45)&&(x < 600)) {y = 50;} // first labyrinth (top wall inside)
 				/////////////////////////middle maze wall////////////////////////////////////
-				if ((y < 400)&&(y > 372)&&(x > 100)&&(x < 550)) {y = 400;} // middle labyrinth (middle wall outside)
-
+				if ((y < 400)&&(y > 382)&&(x > 100)&&(x < 550)) {y = 400;} // middle labyrinth (bottom wall outside)
+				if((y < 100)&&(y > 80)&&(x > 100)&&(x < 550)) {y = 100;} // middle labyrinth (top wall inside)
 				break;
 
 
@@ -91,8 +91,8 @@
 			    if ((y > 40)&&(y < 60)&&(x > 50)&&(x < 600)) {y = 40;} // first labyrinth (top wall outside)
 			    if((y < 460)&&(y > 440)&&(x > 45)&&(x < 595)) {y = 440;} // first labyrinth (bottom wall inside)
 			    /////////////////////////middle maze wall////////////////////////////////////
-			    if ((y > 90)&&(y < 110)&&(x > 100)&&(x < 550)) {y = 90;} // middle labyrinth (middle wall outside)
-
+			    if ((y > 90)&&(y < 110)&&(x > 100)&&(x < 550)) {y = 90;} // middle labyrinth (top wall outside)
+			    if((y < 409)&&(y > 390)&&(x > 100)&&(x < 550)) {y = 390;} // middle labyrinth (bottom wall inside)
 				break;
 
 
@@ -107,7 +107,7 @@
 			    /////////////////////////middle maze wall////////////////////////////////////
 			    if ((y > 100)&&(y < 200)&&(x > 530)&&(x < 550)) {x = 550;} // middle labyrinth (right wall outside top)
 			    if ((y > 300)&&(y < 400)&&(x > 530)&&(x < 550)) {x = 550;}// middle labyrinth (right wall outside bottom)
-
+			    if ((y > 90)&&(y < 400)&&(x > 80)&&(x < 100)) {x = 100;} // middle labyrinth (left wall inside)
 				break;     
 
 
@@ -120,8 +120,10 @@
 			    if ((y > 300)&&(y < 450)&&(x > 40)&&(x < 60)) {x = 40;}// first labyrinth (left wall outside bottom)
 			    if ((y > 45)&&(y < 450)&&(x < 610)&&(x > 590)) {x = 590;} // first labyrinth (right wall inside)
 			    /////////////////////////middle maze wall////////////////////////////////////
-			    if ((y > 90)&&(y < 400)&&(x > 90)&&(x < 120)) {x = 90;} // middle labyrinth (left wall outside)
-			    
+			    if ((y > 90)&&(y < 400)&&(x > 90)&&(x < 110)) {x = 90;} // middle labyrinth (left wall outside)
+			    if ((y > 100)&&(y < 200)&&(x < 560)&&(x > 540)) {x = 540;} // middle labyrinth (right wall inside top)
+			    if ((y > 300)&&(y < 400)&&(x < 560)&&(x > 540)) {x = 540;}// middle labyrinth (right wall inside bottom)
+
 				break;
 					
 			}
